Updated Home.js and NavMenu.css

--- a/ClientApp/src/components/NavMenu.css
+++ b/ClientApp/src/components/NavMenu.css
@@ -1,7 +1,15 @@
-﻿a.navbar-brand {
+﻿body {
+  background-color:gainsboro
+}
+
+a.navbar-brand {
   white-space: normal;
   text-align: center;
   word-break: break-all;
+  color: white;
+  background-color:teal;
+  padding: 10px;
+  border-radius: 10px;
 }
 
 html {
